tweaks to pipeline

--- a/6-AssignCSDs/Test/PrelimAnalysis.ipynb
+++ b/6-AssignCSDs/Test/PrelimAnalysis.ipynb
@@ -151,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-14T22:26:13.798742Z",
-     "iopub.status.busy": "2022-10-14T22:26:13.798054Z",
-     "iopub.status.idle": "2022-10-14T22:26:21.429980Z",
-     "shell.execute_reply": "2022-10-14T22:26:21.429170Z",
-     "shell.execute_reply.started": "2022-10-14T22:26:13.798701Z"
+     "iopub.execute_input": "2022-10-21T14:19:24.165880Z",
+     "iopub.status.busy": "2022-10-21T14:19:24.165066Z",
+     "iopub.status.idle": "2022-10-21T14:19:55.785885Z",
+     "shell.execute_reply": "2022-10-21T14:19:55.785048Z",
+     "shell.execute_reply.started": "2022-10-21T14:19:24.165844Z"
     },
     "tags": []
    },
@@ -170,7 +170,7 @@
     "import math\n",
     "\n",
     "\n",
-    "df = pd.read_csv(\"/home/jovyan/ODBiz/6-AssignCSDs/Test/Test4.csv\", low_memory=False)\n",
+    "df = pd.read_csv(\"/home/jovyan/ODBiz/5a-Matching/output/matched.csv\", low_memory=False)\n",
     "\n",
     "# STEP 1\n",
     "# copy over NAICS values that already exist in the data\n",
@@ -256,19 +256,19 @@
     "\n",
     "\n",
     "#df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/Filtred_NAICS.csv',index=False)\n",
-    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/4PLA.csv', index=False)"
+    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/PLA.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-14T22:27:12.893777Z",
-     "iopub.status.busy": "2022-10-14T22:27:12.892920Z",
-     "iopub.status.idle": "2022-10-14T22:27:19.142356Z",
-     "shell.execute_reply": "2022-10-14T22:27:19.141461Z",
-     "shell.execute_reply.started": "2022-10-14T22:27:12.893741Z"
+     "iopub.execute_input": "2022-10-21T14:19:55.788154Z",
+     "iopub.status.busy": "2022-10-21T14:19:55.787576Z",
+     "iopub.status.idle": "2022-10-21T14:20:16.892272Z",
+     "shell.execute_reply": "2022-10-21T14:20:16.891358Z",
+     "shell.execute_reply.started": "2022-10-21T14:19:55.788125Z"
     },
     "tags": []
    },
@@ -335,19 +335,19 @@
     "\n",
     "#df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/Filtred_NAICS.csv', index=False)\n",
     "\n",
-    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/4PLA.csv', index= False)"
+    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/PLA.csv', index= False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-14T22:27:24.905687Z",
-     "iopub.status.busy": "2022-10-14T22:27:24.905170Z",
-     "iopub.status.idle": "2022-10-14T22:27:28.752539Z",
-     "shell.execute_reply": "2022-10-14T22:27:28.751731Z",
-     "shell.execute_reply.started": "2022-10-14T22:27:24.905654Z"
+     "iopub.execute_input": "2022-10-21T14:20:31.218373Z",
+     "iopub.status.busy": "2022-10-21T14:20:31.217211Z",
+     "iopub.status.idle": "2022-10-21T14:20:46.919247Z",
+     "shell.execute_reply": "2022-10-21T14:20:46.918382Z",
+     "shell.execute_reply.started": "2022-10-21T14:20:31.218318Z"
     },
     "tags": []
    },
@@ -368,19 +368,143 @@
     "df['NAICS'] = (pd.to_numeric(df['NAICS'], errors= 'coerce').fillna(''))\n",
     "\n",
     "#df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/Filtred_NAICS.csv', index=False)\n",
-    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/4PLA.csv', index=False)\n"
+    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/PLA.csv', index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-14T22:27:34.087545Z",
-     "iopub.status.busy": "2022-10-14T22:27:34.087056Z",
-     "iopub.status.idle": "2022-10-14T22:27:38.073756Z",
-     "shell.execute_reply": "2022-10-14T22:27:38.072986Z",
-     "shell.execute_reply.started": "2022-10-14T22:27:34.087510Z"
+     "iopub.execute_input": "2022-10-21T14:20:52.516827Z",
+     "iopub.status.busy": "2022-10-21T14:20:52.516293Z",
+     "iopub.status.idle": "2022-10-21T14:21:04.864453Z",
+     "shell.execute_reply": "2022-10-21T14:21:04.863646Z",
+     "shell.execute_reply.started": "2022-10-21T14:20:52.516789Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "province\n",
+      "78                       1\n",
+      "AB                   77097\n",
+      "BC                  232465\n",
+      "LAKEVIEW ESTATES         1\n",
+      "MB                     224\n",
+      "NB                     155\n",
+      "NL                      33\n",
+      "NS                      46\n",
+      "NT                    1563\n",
+      "NU                     223\n",
+      "ON                  243590\n",
+      "PE                       5\n",
+      "QC                  244527\n",
+      "SK                     168\n",
+      "YT                      13\n",
+      "Name: idx, dtype: int64\n",
+      "803491\n",
+      "province\n",
+      "78                      0\n",
+      "AB                   2615\n",
+      "BC                  38896\n",
+      "LAKEVIEW ESTATES        0\n",
+      "MB                    158\n",
+      "NB                     31\n",
+      "NL                     28\n",
+      "NS                     35\n",
+      "NT                     99\n",
+      "NU                     48\n",
+      "ON                  82148\n",
+      "PE                      3\n",
+      "QC                    276\n",
+      "SK                    110\n",
+      "YT                      6\n",
+      "Name: NAICS, dtype: int64\n",
+      "province\n",
+      "78                      0\n",
+      "AB                   2615\n",
+      "BC                  38896\n",
+      "LAKEVIEW ESTATES        0\n",
+      "MB                    158\n",
+      "NB                     31\n",
+      "NL                     28\n",
+      "NS                     35\n",
+      "NT                     99\n",
+      "NU                     48\n",
+      "ON                  82148\n",
+      "PE                      3\n",
+      "QC                    276\n",
+      "SK                    110\n",
+      "YT                      6\n",
+      "Name: NAICS, dtype: int64\n",
+      "0         43001f90eb186ce721d1\n",
+      "1         8206f36af22e46a365c2\n",
+      "2         e3500c84e808f4f563f8\n",
+      "3         64733d5fad76816d0138\n",
+      "4         3a2812701630893c2180\n",
+      "                  ...         \n",
+      "803486    bff0ac01999d11e1665d\n",
+      "803487    c370f3a68831eaed091b\n",
+      "803488    a0bc0f106500f748a573\n",
+      "803489    059d5420db37371eec18\n",
+      "803490    5d9d17ffffb0e6d343e2\n",
+      "Name: idx, Length: 803491, dtype: object\n",
+      "0        NaN\n",
+      "1        NaN\n",
+      "2        NaN\n",
+      "3        NaN\n",
+      "4        NaN\n",
+      "          ..\n",
+      "803486   NaN\n",
+      "803487   NaN\n",
+      "803488   NaN\n",
+      "803489   NaN\n",
+      "803490   NaN\n",
+      "Name: NAICS, Length: 803491, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import math\n",
+    "\n",
+    "\n",
+    "data = pd.read_csv(\"/home/jovyan/ODBiz/6-AssignCSDs/Test/PLA.csv\", low_memory=False)\n",
+    "\n",
+    "\n",
+    "count_unique = data['idx'].nunique()     \n",
+    "count_n = data['NAICS'].nunique()   \n",
+    "\n",
+    "count_n = data.groupby('province')['NAICS'].count() \n",
+    "\n",
+    "count = data.groupby('province')['idx'].count() \n",
+    "\n",
+    "tot = data['idx']\n",
+    "tot_n = data['NAICS']\n",
+    "\n",
+    "print(count)            \n",
+    "print(count_unique)\n",
+    "print(count_n)            \n",
+    "print(count_n)\n",
+    "print(tot)\n",
+    "print(tot_n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-10-21T14:39:43.929290Z",
+     "iopub.status.busy": "2022-10-21T14:39:43.928778Z",
+     "iopub.status.idle": "2022-10-21T14:39:59.443190Z",
+     "shell.execute_reply": "2022-10-21T14:39:59.442319Z",
+     "shell.execute_reply.started": "2022-10-21T14:39:43.929258Z"
     },
     "tags": []
    },
@@ -399,19 +523,19 @@
     "\n",
     "\n",
     "#df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/Filtred_NAICS.csv', index=False)\n",
-    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/4PLA.csv', index= False)"
+    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/PLA.csv', index= False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-14T23:00:06.465080Z",
-     "iopub.status.busy": "2022-10-14T23:00:06.464319Z",
-     "iopub.status.idle": "2022-10-14T23:00:31.327193Z",
-     "shell.execute_reply": "2022-10-14T23:00:31.326348Z",
-     "shell.execute_reply.started": "2022-10-14T23:00:06.465045Z"
+     "iopub.execute_input": "2022-10-21T14:40:03.396908Z",
+     "iopub.status.busy": "2022-10-21T14:40:03.395651Z",
+     "iopub.status.idle": "2022-10-21T14:40:40.920201Z",
+     "shell.execute_reply": "2022-10-21T14:40:40.919328Z",
+     "shell.execute_reply.started": "2022-10-21T14:40:03.396855Z"
     },
     "tags": []
    },
@@ -469,7 +593,50 @@
     "\n",
     "\n",
     "#df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/Filtred_NAICS.csv', index=False)\n",
-    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/4PLA.csv', index=False)"
+    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/PLA.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-10-20T14:39:24.913210Z",
+     "iopub.status.busy": "2022-10-20T14:39:24.912310Z",
+     "iopub.status.idle": "2022-10-20T14:39:35.358343Z",
+     "shell.execute_reply": "2022-10-20T14:39:35.357371Z",
+     "shell.execute_reply.started": "2022-10-20T14:39:24.913121Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import math\n",
+    "\n",
+    "\n",
+    "data_2 = pd.read_csv(\"/home/jovyan/ODBiz/6-AssignCSDs/Test/PLA.csv\", low_memory=False)\n",
+    "\n",
+    "\n",
+    "number = [11.0, 21.0, 22.0, 23.0, 31.0, 32.0, 33.0, 41.0, 42.0, 44.0, 45.0, 48.0, 49.0, 51.0, 52.0, 53.0, 54.0, 55.0, 56.0, 61.0, 62.0, 71.0, 72.0, 81.0, 91.0, 99.0]\n",
+    "\n",
+    "\n",
+    "data_2.NAICS_Group.isin(number)\n",
+    "\n",
+    "\n",
+    "data_2_number = data_2[data_2.NAICS_Group.isin(number)]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "data_2_number.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/PLA_1.csv', index=False)\n",
+    "\n"
    ]
   },
   {
@@ -481,10 +648,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-10-21T14:11:44.287607Z",
+     "iopub.status.busy": "2022-10-21T14:11:44.287080Z",
+     "iopub.status.idle": "2022-10-21T14:11:55.962227Z",
+     "shell.execute_reply": "2022-10-21T14:11:55.961506Z",
+     "shell.execute_reply.started": "2022-10-21T14:11:44.287557Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "province\n",
+      "78                       1\n",
+      "AB                   77097\n",
+      "BC                  232465\n",
+      "LAKEVIEW ESTATES         1\n",
+      "MB                     224\n",
+      "NB                     155\n",
+      "NL                      33\n",
+      "NS                      46\n",
+      "NT                    1563\n",
+      "NU                     223\n",
+      "ON                  243590\n",
+      "PE                       5\n",
+      "QC                  244527\n",
+      "SK                     168\n",
+      "YT                      13\n",
+      "Name: idx, dtype: int64\n",
+      "803491\n",
+      "0         43001f90eb186ce721d1\n",
+      "1         8206f36af22e46a365c2\n",
+      "2         e3500c84e808f4f563f8\n",
+      "3         64733d5fad76816d0138\n",
+      "4         3a2812701630893c2180\n",
+      "                  ...         \n",
+      "803486    bff0ac01999d11e1665d\n",
+      "803487    c370f3a68831eaed091b\n",
+      "803488    a0bc0f106500f748a573\n",
+      "803489    059d5420db37371eec18\n",
+      "803490    5d9d17ffffb0e6d343e2\n",
+      "Name: idx, Length: 803491, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import math\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv(\"/home/jovyan/ODBiz/5a-Matching/output/matched.csv\", low_memory=False)\n",
+    "\n",
+    "\n",
+    "count_unique = df['idx'].nunique()     \n",
+    "\n",
+    "count = df.groupby('province')['idx'].count() \n",
+    "\n",
+    "tot = df['idx']\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(count)            \n",
+    "print(count_unique)\n",
+    "print(tot)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-10-21T14:40:54.506668Z",
+     "iopub.status.busy": "2022-10-21T14:40:54.506144Z",
+     "iopub.status.idle": "2022-10-21T14:41:06.162582Z",
+     "shell.execute_reply": "2022-10-21T14:41:06.161811Z",
+     "shell.execute_reply.started": "2022-10-21T14:40:54.506635Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "province\n",
+      "78                      0\n",
+      "AB                   2615\n",
+      "BC                  38896\n",
+      "LAKEVIEW ESTATES        0\n",
+      "MB                    158\n",
+      "NB                     31\n",
+      "NL                     28\n",
+      "NS                     35\n",
+      "NT                     99\n",
+      "NU                     48\n",
+      "ON                  82148\n",
+      "PE                      3\n",
+      "QC                    276\n",
+      "SK                    110\n",
+      "YT                      6\n",
+      "Name: NAICS, dtype: int64\n",
+      "province\n",
+      "78                       1\n",
+      "AB                   77097\n",
+      "BC                  232465\n",
+      "LAKEVIEW ESTATES         1\n",
+      "MB                     224\n",
+      "NB                     155\n",
+      "NL                      33\n",
+      "NS                      46\n",
+      "NT                    1563\n",
+      "NU                     223\n",
+      "ON                  243590\n",
+      "PE                       5\n",
+      "QC                  244527\n",
+      "SK                     168\n",
+      "YT                      13\n",
+      "Name: idx, dtype: int64\n",
+      "803491\n",
+      "province\n",
+      "78                       1\n",
+      "AB                   76902\n",
+      "BC                  232438\n",
+      "LAKEVIEW ESTATES         1\n",
+      "MB                     221\n",
+      "NB                     155\n",
+      "NL                      33\n",
+      "NS                      46\n",
+      "NT                    1563\n",
+      "NU                      52\n",
+      "ON                  243529\n",
+      "PE                       5\n",
+      "QC                   64594\n",
+      "SK                     167\n",
+      "YT                      13\n",
+      "Name: NAICS_Group, dtype: int64\n",
+      "province\n",
+      "78                       1\n",
+      "AB                   77097\n",
+      "BC                  232465\n",
+      "LAKEVIEW ESTATES         1\n",
+      "MB                     224\n",
+      "NB                     155\n",
+      "NL                      33\n",
+      "NS                      46\n",
+      "NT                    1563\n",
+      "NU                     223\n",
+      "ON                  243590\n",
+      "PE                       5\n",
+      "QC                  244527\n",
+      "SK                     168\n",
+      "YT                      13\n",
+      "Name: idx, dtype: int64\n",
+      "0         Other\n",
+      "1          48.0\n",
+      "2          48.0\n",
+      "3          48.0\n",
+      "4          23.0\n",
+      "          ...  \n",
+      "803486     72.0\n",
+      "803487     23.0\n",
+      "803488     52.0\n",
+      "803489     44.0\n",
+      "803490     52.0\n",
+      "Name: NAICS_Group, Length: 803491, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import math\n",
+    "\n",
+    "\n",
+    "data_2 = pd.read_csv(\"/home/jovyan/ODBiz/6-AssignCSDs/Test/PLA.csv\", low_memory=False)\n",
+    "\n",
+    "\n",
+    "count_unique = data_2['idx'].nunique()     \n",
+    "count_n = data_2['NAICS_Group'].nunique()   \n",
+    "\n",
+    "count_n = data_2.groupby('province')['NAICS_Group'].count() \n",
+    "\n",
+    "count = data_2.groupby('province')['idx'].count() \n",
+    "\n",
+    "tot = data_2['NAICS_Group']\n",
+    "\n",
+    "\n",
+    "\n",
+    "count_naics =data_2.groupby('province')['NAICS'].count()\n",
+    "print(count_naics)\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(count)            \n",
+    "print(count_unique)\n",
+    "print(count_n)            \n",
+    "print(count)\n",
+    "print(tot)\n"
+   ]
   },
   {
    "cell_type": "code",
