--- a/3-Merging/merging_main.ipynb
+++ b/3-Merging/merging_main.ipynb
@@ -27,8 +27,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "----------------------------------------------------------------------------------------------------------------------------\n",
       "Merging files: 100%|██████████| 61/61 [00:04<00:00, 14.78it/s]\n",
@@ -75,8 +75,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "Loading data: 100%|██████████| 81/81 [00:04<00:00, 17.61it/s]\n",
       "\n",
@@ -100,8 +100,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "Loading data: 100%|██████████| 9/9 [00:04<00:00,  2.05it/s]\n",
       "Filling in NA as empty string\n",
@@ -129,8 +129,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "Loading data: 100%|██████████| 9/9 [00:04<00:00,  2.04it/s]\n",
       "Loaded in        803584 rows\n",
@@ -150,10 +150,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "most_recent_filepath = /home/jovyan/ODBiz/3-Merging/output/4-ODBiz_merged_2022-08-29.csv\nMost recent merged file saved to /home/jovyan/ODBiz/4-Parsing/input/ODBiz_Merged.csv\n"
+      "most_recent_filepath = /home/jovyan/ODBiz/3-Merging/output/4-ODBiz_merged_2022-08-29.csv\n",
+      "Most recent merged file saved to /home/jovyan/ODBiz/4-Parsing/input/ODBiz_Merged.csv\n"
      ]
     }
    ],
@@ -212,10 +213,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_27461/1156949041.py:1: DtypeWarning: Columns (3,4,5,6,7,8,9,11,12,13,14,17,18,19,20,21,22,23,24,27,28,29,30,31,33,34,35,39,41,43,44) have mixed types. Specify dtype option on import or set low_memory=False.\n  df = pd.read_csv('/home/jovyan/ODBiz/4-Parsing/input/ODBiz_Merged.csv')\n"
+      "/tmp/ipykernel_27461/1156949041.py:1: DtypeWarning: Columns (3,4,5,6,7,8,9,11,12,13,14,17,18,19,20,21,22,23,24,27,28,29,30,31,33,34,35,39,41,43,44) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv('/home/jovyan/ODBiz/4-Parsing/input/ODBiz_Merged.csv')\n"
      ]
     }
    ],
@@ -229,7 +231,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "Index(['idx', 'localfile', 'business_name', 'alt_business_name',\n",
@@ -247,12 +248,42 @@
        "      dtype='object')"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "execution_count": 11
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-10-20T13:40:55.819730Z",
+     "iopub.status.busy": "2022-10-20T13:40:55.819182Z",
+     "iopub.status.idle": "2022-10-20T13:40:56.539458Z",
+     "shell.execute_reply": "2022-10-20T13:40:56.538268Z",
+     "shell.execute_reply.started": "2022-10-20T13:40:55.819636Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mlen\u001b[39m(\u001b[43mdf\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "len(df)"
    ]
   },
   {
@@ -265,8 +296,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3813jvsc74a57bd0e14a6e65307f8f691692612d68f6800491e991619d81311b752057c43593328e",
-   "display_name": "Python 3.8.13 64-bit ('odbiz': conda)"
+   "display_name": "Python [conda env:odbiz]",
+   "language": "python",
+   "name": "conda-env-odbiz-py"
   },
   "language_info": {
    "codemirror_mode": {
