--- a/5a-Matching/analysis.ipynb
+++ b/5a-Matching/analysis.ipynb
@@ -28,20 +28,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 116,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-13T15:43:40.760262Z",
-     "iopub.status.busy": "2022-10-13T15:43:40.759994Z",
-     "iopub.status.idle": "2022-10-13T15:43:40.764167Z",
-     "shell.execute_reply": "2022-10-13T15:43:40.763358Z",
-     "shell.execute_reply.started": "2022-10-13T15:43:40.760232Z"
+     "iopub.execute_input": "2022-10-17T22:27:03.544436Z",
+     "iopub.status.busy": "2022-10-17T22:27:03.544169Z",
+     "iopub.status.idle": "2022-10-17T22:27:03.547606Z",
+     "shell.execute_reply": "2022-10-17T22:27:03.546908Z",
+     "shell.execute_reply.started": "2022-10-17T22:27:03.544406Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -649,6 +650,343 @@
    ],
    "source": [
     "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-10-17T19:24:13.770668Z",
+     "iopub.status.busy": "2022-10-17T19:24:13.770382Z",
+     "iopub.status.idle": "2022-10-17T19:24:26.146808Z",
+     "shell.execute_reply": "2022-10-17T19:24:26.145771Z",
+     "shell.execute_reply.started": "2022-10-17T19:24:13.770637Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# We deduplicated on some variables during the matching. \n",
+    "# We need to add back in the results for the duplicates\n",
+    "\n",
+    "# sort the dataframe \n",
+    "df = pd.read_csv('output/matched_10-26.csv', low_memory=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-10-17T20:51:20.451899Z",
+     "iopub.status.busy": "2022-10-17T20:51:20.451650Z",
+     "iopub.status.idle": "2022-10-17T20:51:20.749124Z",
+     "shell.execute_reply": "2022-10-17T20:51:20.748318Z",
+     "shell.execute_reply.started": "2022-10-17T20:51:20.451873Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_input = df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-10-17T20:29:12.568802Z",
+     "iopub.status.busy": "2022-10-17T20:29:12.568461Z",
+     "iopub.status.idle": "2022-10-17T20:29:14.114698Z",
+     "shell.execute_reply": "2022-10-17T20:29:14.113842Z",
+     "shell.execute_reply.started": "2022-10-17T20:29:12.568763Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# sort dataframe with deduplicated variables, so that deduplicated rows appear together\n",
+    "# this way we can just check for matches with the previous row\n",
+    "df.sort_values(['province', 'city', 'street_no', 'formatted_en'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-10-18T15:35:19.979825Z",
+     "iopub.status.busy": "2022-10-18T15:35:19.979549Z",
+     "iopub.status.idle": "2022-10-18T15:35:19.984255Z",
+     "shell.execute_reply": "2022-10-18T15:35:19.983464Z",
+     "shell.execute_reply.started": "2022-10-18T15:35:19.979795Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df = df_input.head(1000)\n",
+    "df.reset_index(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-10-17T21:17:47.343025Z",
+     "iopub.status.busy": "2022-10-17T21:17:47.342750Z",
+     "iopub.status.idle": "2022-10-17T21:17:47.347869Z",
+     "shell.execute_reply": "2022-10-17T21:17:47.347221Z",
+     "shell.execute_reply.started": "2022-10-17T21:17:47.342997Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0'"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.at[500,'street_no']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-10-18T15:34:57.506442Z",
+     "iopub.status.busy": "2022-10-18T15:34:57.506167Z",
+     "iopub.status.idle": "2022-10-18T15:34:57.540083Z",
+     "shell.execute_reply": "2022-10-18T15:34:57.539277Z",
+     "shell.execute_reply.started": "2022-10-18T15:34:57.506414Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# next we loop through \n",
+    "# to add in latitude coordinates\n",
+    "\n",
+    "for i in range(len(df)):\n",
+    "    \n",
+    "    # we're checking first against street_no\n",
+    "    if (i > 1):\n",
+    "        if (df.at[i , 'street_no'] == df.at[i - 1, 'street_no']):\n",
+    "            if (df.at[i, 'formatted_en'] == df.at[i - 1, 'formatted_en']):\n",
+    "                if (df.at[i, 'city'] == df.at[i - 1, 'city']):\n",
+    "                    if (df.at[i, 'province'] == df.at[i - 1, 'province']):\n",
+    "                        x = df.at[i, 'x']\n",
+    "                        if (not pd.isna(x) and x != 0):\n",
+    "                            df.at[i , 'x'] = df.at[i - 1, 'x']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-10-18T16:07:02.963027Z",
+     "iopub.status.busy": "2022-10-18T16:07:02.962762Z",
+     "iopub.status.idle": "2022-10-18T16:07:02.989973Z",
+     "shell.execute_reply": "2022-10-18T16:07:02.989236Z",
+     "shell.execute_reply.started": "2022-10-18T16:07:02.962996Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df.to_csv('test.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# next we need to assign x and y to lat/lon and decide our cutoff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-10-20T21:03:57.065746Z",
+     "iopub.status.busy": "2022-10-20T21:03:57.065467Z",
+     "iopub.status.idle": "2022-10-20T21:04:09.435750Z",
+     "shell.execute_reply": "2022-10-20T21:04:09.434968Z",
+     "shell.execute_reply.started": "2022-10-20T21:03:57.065719Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('output/matched.csv', low_memory=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-10-18T19:24:03.134987Z",
+     "iopub.status.busy": "2022-10-18T19:24:03.134776Z",
+     "iopub.status.idle": "2022-10-18T19:24:03.139566Z",
+     "shell.execute_reply": "2022-10-18T19:24:03.138818Z",
+     "shell.execute_reply.started": "2022-10-18T19:24:03.134959Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "803491"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-10-18T19:29:31.188062Z",
+     "iopub.status.busy": "2022-10-18T19:29:31.187802Z",
+     "iopub.status.idle": "2022-10-18T19:29:32.061564Z",
+     "shell.execute_reply": "2022-10-18T19:29:32.060843Z",
+     "shell.execute_reply.started": "2022-10-18T19:29:31.188038Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AB:\n",
+      "   rows: 77097\n",
+      "   perfect matches: 9%\n",
+      "   matches above 0.8: 24%\n",
+      "BC:\n",
+      "   rows: 232465\n",
+      "   perfect matches: 15%\n",
+      "   matches above 0.8: 22%\n",
+      "MB:\n",
+      "   rows: 224\n",
+      "   perfect matches: 22%\n",
+      "   matches above 0.8: 37%\n",
+      "NB:\n",
+      "   rows: 155\n",
+      "   perfect matches: 47%\n",
+      "   matches above 0.8: 67%\n",
+      "NT:\n",
+      "   rows: 1563\n",
+      "   perfect matches: 44%\n",
+      "   matches above 0.8: 50%\n",
+      "NS:\n",
+      "   rows: 46\n",
+      "   perfect matches: 50%\n",
+      "   matches above 0.8: 71%\n",
+      "ON:\n",
+      "   rows: 243590\n",
+      "   perfect matches: 11%\n",
+      "   matches above 0.8: 20%\n",
+      "PE:\n",
+      "   rows: 5\n",
+      "   perfect matches: 80%\n",
+      "   matches above 0.8: 80%\n",
+      "QC:\n",
+      "   rows: 244527\n",
+      "   perfect matches: 7%\n",
+      "   matches above 0.8: 32%\n",
+      "SK:\n",
+      "   rows: 168\n",
+      "   perfect matches: 8%\n",
+      "   matches above 0.8: 22%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# compare matches across provinces\n",
+    "\n",
+    "# for each province want\n",
+    "# - number of rows\n",
+    "# - percent perfect matches\n",
+    "# - percent matches \n",
+    "# - remainder with no geocodes\n",
+    "\n",
+    "provinces = ['AB', 'BC', 'MB', 'NB', 'NT', 'NS', 'ON', 'PE', 'QC', 'SK']\n",
+    "\n",
+    "for province in provinces:\n",
+    "    df2 = df[df['province'] == province]\n",
+    "    no_matches = df2['ratio'][df2['ratio'] > 80].count()\n",
+    "    perfect_matches = df2['ratio'][df2['ratio'] > 99].count()\n",
+    "    percent_matches = int(100 * no_matches / len(df2))\n",
+    "    percent_perfect_matches = int(100 * perfect_matches / len(df2))\n",
+    "#     print('Matches for ', province, ': ', int(percent_matches), '%', sep=\"\")\n",
+    "\n",
+    "    # get the number left to geocode - either an na in either 'longitude' or 'x'\n",
+    "\n",
+    "    print(province, \":\", sep=\"\")\n",
+    "    print('   rows: ', len(df2), sep=\"\")\n",
+    "    print('   perfect matches: ', percent_perfect_matches, '%', sep=\"\")\n",
+    "    print('   matches above 0.8: ', percent_matches, '%', sep=\"\")\n",
+    "#     print('remaining to geocode: ', len(df2), sep=\"\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-10-19T14:43:34.365368Z",
+     "iopub.status.busy": "2022-10-19T14:43:34.365067Z",
+     "iopub.status.idle": "2022-10-19T14:43:34.417892Z",
+     "shell.execute_reply": "2022-10-19T14:43:34.417116Z",
+     "shell.execute_reply.started": "2022-10-19T14:43:34.365336Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "57"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# number of data sources\n",
+    "df['localfile'].nunique()"
    ]
   },
   {
