updated source data licenses

--- a/6-AssignCSDs/Test/Assign_NAICS.ipynb
+++ b/6-AssignCSDs/Test/Assign_NAICS.ipynb
@@ -274,13 +274,13 @@
     "# (least accurate/ still de-bugging)\n",
     "\n",
     "\n",
-    "agri = 'agriculture'\n",
+    "agri = 'agriculture|cultivation|breeding'\n",
     "mining = 'mining'\n",
     "uti = 'utilities'\n",
     "cons = 'construction|building|contractors|cement|contractor|ecavating|excavating|excavation|installation'\n",
     "mani = 'manifacturing|manufacturer|Manufacturing|mfg.|printing|printer|Manufacturer'\n",
     "whole = 'wholesale|whlse.'\n",
-    "retail = 'retail|store|supplies|clothing|sales|dealer|pharmacy'\n",
+    "retail = 'retail|store|supplies|clothing|sales|dealer|pharmacy|fueling'\n",
     "trans = 'transportation|courier|warehouse|warehousing|trucking'\n",
     "info = 'information|publishing|animation|production'\n",
     "fin = 'finance|bank|bookkeeping|broker|financial|currency|credit|insurance|investment'\n",
@@ -290,9 +290,9 @@
     "admin = 'waste|administration|agency|cleaning|janitorial|security'\n",
     "edu = 'educational|education|instruction|tutor|school|schools|training|teacher|tutoring'\n",
     "health = 'health|Psychiatrist|pathologist|Therapies|therapy|Oculist|acupuncturist|chiropractor|dentist|clinic|denturist|Psychologist|doctor|RMT|pediatric|hospital|therapist|laboratory|physician|dental|psychological|Podiatrist|GASTROENTEROLOGIST|Physiotherapy|Optometrist'\n",
-    "arts = 'arts|studio|dance|entertainment|event|fitness|film|photographer'\n",
+    "arts = 'arts|studio|dance|entertainment|event|fitness|film|photographer|recreation|amusement'\n",
     "acco = 'accommodation|restaurant|cafe|caterer|casino|dining|food|hotel|Bed and Breakfast|Restaurant|patio|liquor'\n",
-    "other = 'Auto|barber|beauty|repair|charitable|charity|association|spa|dating|Esthetician|personal|hairdresser|hairdressing|hair|massage'\n",
+    "other = 'Auto|barber|beauty|funeral|repair|charitable|charity|association|spa|dating|Esthetician|personal|hairdresser|hairdressing|hair|massage'\n",
     "pub = 'public'\n",
     "\n",
     "\n",
