updated matching and NAICS

--- a/5a-Matching/analysis.ipynb
+++ b/5a-Matching/analysis.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-02T14:30:37.798733Z",
-     "iopub.status.busy": "2022-11-02T14:30:37.798440Z",
-     "iopub.status.idle": "2022-11-02T14:30:38.539889Z",
-     "shell.execute_reply": "2022-11-02T14:30:38.539142Z",
-     "shell.execute_reply.started": "2022-11-02T14:30:37.798698Z"
+     "iopub.execute_input": "2022-11-22T22:05:01.668944Z",
+     "iopub.status.busy": "2022-11-22T22:05:01.668438Z",
+     "iopub.status.idle": "2022-11-22T22:05:02.386293Z",
+     "shell.execute_reply": "2022-11-22T22:05:02.385479Z",
+     "shell.execute_reply.started": "2022-11-22T22:05:01.668790Z"
     },
     "tags": []
    },
@@ -47,14 +47,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-22T22:08:16.250918Z",
+     "iopub.status.busy": "2022-11-22T22:08:16.250633Z",
+     "iopub.status.idle": "2022-11-22T22:08:25.535415Z",
+     "shell.execute_reply": "2022-11-22T22:08:25.534374Z",
+     "shell.execute_reply.started": "2022-11-22T22:08:16.250888Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dfa = pd.read_csv('data/oda-addresses/ODA_AB_v1_formatted.csv', low_memory=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('output/matched.csv', low_memory=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-28T15:32:00.783800Z",
-     "iopub.status.busy": "2022-10-28T15:32:00.783498Z",
-     "iopub.status.idle": "2022-10-28T15:32:12.425429Z",
-     "shell.execute_reply": "2022-10-28T15:32:12.424385Z",
-     "shell.execute_reply.started": "2022-10-28T15:32:00.783769Z"
+     "iopub.execute_input": "2022-11-07T21:32:16.772232Z",
+     "iopub.status.busy": "2022-11-07T21:32:16.771916Z",
+     "iopub.status.idle": "2022-11-07T21:32:26.444668Z",
+     "shell.execute_reply": "2022-11-07T21:32:26.443893Z",
+     "shell.execute_reply.started": "2022-11-07T21:32:16.772149Z"
     },
     "tags": []
    },
@@ -295,14 +321,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-28T15:33:23.626784Z",
-     "iopub.status.busy": "2022-10-28T15:33:23.626502Z",
-     "iopub.status.idle": "2022-10-28T15:33:24.606136Z",
-     "shell.execute_reply": "2022-10-28T15:33:24.605269Z",
-     "shell.execute_reply.started": "2022-10-28T15:33:23.626754Z"
+     "iopub.execute_input": "2022-11-07T21:38:35.421445Z",
+     "iopub.status.busy": "2022-11-07T21:38:35.421195Z",
+     "iopub.status.idle": "2022-11-07T21:38:36.227135Z",
+     "shell.execute_reply": "2022-11-07T21:38:36.226168Z",
+     "shell.execute_reply.started": "2022-11-07T21:38:35.421418Z"
     },
     "tags": []
    },
@@ -313,44 +339,34 @@
      "text": [
       "AB:\n",
       "   rows: 77097\n",
-      "   perfect matches: 9%\n",
-      "   matches above 0.94: 9%\n",
+      "remaining to geocode: 14483\n",
       "BC:\n",
       "   rows: 232465\n",
-      "   perfect matches: 15%\n",
-      "   matches above 0.94: 16%\n",
+      "remaining to geocode: 86746\n",
       "MB:\n",
       "   rows: 224\n",
-      "   perfect matches: 22%\n",
-      "   matches above 0.94: 33%\n",
+      "remaining to geocode: 133\n",
       "NB:\n",
       "   rows: 155\n",
-      "   perfect matches: 47%\n",
-      "   matches above 0.94: 52%\n",
+      "remaining to geocode: 32\n",
       "NT:\n",
       "   rows: 1563\n",
-      "   perfect matches: 44%\n",
-      "   matches above 0.94: 46%\n",
+      "remaining to geocode: 424\n",
       "NS:\n",
       "   rows: 46\n",
-      "   perfect matches: 50%\n",
-      "   matches above 0.94: 63%\n",
+      "remaining to geocode: 16\n",
       "ON:\n",
       "   rows: 243590\n",
-      "   perfect matches: 11%\n",
-      "   matches above 0.94: 15%\n",
+      "remaining to geocode: 114807\n",
       "PE:\n",
       "   rows: 5\n",
-      "   perfect matches: 80%\n",
-      "   matches above 0.94: 80%\n",
+      "remaining to geocode: 1\n",
       "QC:\n",
       "   rows: 244527\n",
-      "   perfect matches: 7%\n",
-      "   matches above 0.94: 15%\n",
+      "remaining to geocode: 206381\n",
       "SK:\n",
       "   rows: 168\n",
-      "   perfect matches: 8%\n",
-      "   matches above 0.94: 12%\n"
+      "remaining to geocode: 141\n"
      ]
     }
    ],
@@ -367,19 +383,24 @@
     "\n",
     "for province in provinces:\n",
     "    df2 = df[df['province'] == province]\n",
-    "    no_matches = df2['ratio'][df2['ratio'] > 94].count()\n",
-    "    perfect_matches = df2['ratio'][df2['ratio'] > 99].count()\n",
-    "    percent_matches = int(100 * no_matches / len(df2))\n",
-    "    percent_perfect_matches = int(100 * perfect_matches / len(df2))\n",
+    "#     no_matches = df2['ratio'][df2['ratio'] > 94].count()\n",
+    "#     perfect_matches = df2['ratio'][df2['ratio'] > 99].count()\n",
+    "#     percent_matches = int(100 * no_matches / len(df2))\n",
+    "#     percent_perfect_matches = int(100 * perfect_matches / len(df2))\n",
+    "    no_matches = df2['latitude'].isna().sum()\n",
+    "#     percent_matches = int(100 * no_matches / len(df2))\n",
+    "    percent_geocoded = int(100 * no_matches / len(df2))\n",
+    "\n",
     "#     print('Matches for ', province, ': ', int(percent_matches), '%', sep=\"\")\n",
     "\n",
     "    # get the number left to geocode - either an na in either 'longitude' or 'x'\n",
     "\n",
     "    print(province, \":\", sep=\"\")\n",
     "    print('   rows: ', len(df2), sep=\"\")\n",
-    "    print('   perfect matches: ', percent_perfect_matches, '%', sep=\"\")\n",
-    "    print('   matches above 0.94: ', percent_matches, '%', sep=\"\")\n",
-    "#     print('remaining to geocode: ', len(df2), sep=\"\")\n",
+    "#     print('   perfect matches: ', percent_perfect_matches, '%', sep=\"\")\n",
+    "#     print('   matches above 0.94: ', percent_matches, '%', sep=\"\")\n",
+    "#     print('   matches above 0.94: ', percent_matches, '%', sep=\"\")\n",
+    "    print('remaining to geocode: ', df2['latitude'].isna().sum(), sep=\"\")\n",
     "    "
    ]
   },
