--- a/6-AssignCSDs/Test/CSD_Testing.ipynb
+++ b/6-AssignCSDs/Test/CSD_Testing.ipynb
@@ -24,8 +24,8 @@
     "\n",
     "\n",
     "# file paths\n",
-    "filename = '/home/jovyan/ODBiz/6-AssignCSDs/Test/4-ODBiz_merged_2022-07-28-Copy1.csv'\n",
-    "newfile = '/home/jovyan/ODBiz/6-AssignCSDs/Test/Filtred_Sample.csv'\n",
+    "filename = '/home/jovyan/ODBiz/6-AssignCSDs/Test/4-ODBiz_merged_2022-07-28-Copy1.csv' #file to read in \n",
+    "newfile = '/home/jovyan/ODBiz/6-AssignCSDs/Test/Filtred_Sample.csv'  # outputted new file \n",
     "\n",
     "\n",
     "\n",
@@ -122,9 +122,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:odbiz]",
+   "display_name": "Python [conda env:root] *",
    "language": "python",
-   "name": "conda-env-odbiz-py"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -136,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
