--- a/6-AssignCSDs/Test/PrelimAnalysis.ipynb
+++ b/6-AssignCSDs/Test/PrelimAnalysis.ipynb
@@ -880,9 +880,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:odbiz]",
+   "display_name": "Python [conda env:root] *",
    "language": "python",
-   "name": "conda-env-odbiz-py"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -894,7 +894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
