--- a/6-AssignCSDs/Test/Test_Map.ipynb
+++ b/6-AssignCSDs/Test/Test_Map.ipynb
@@ -2,48 +2,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-31T18:10:11.711941Z",
-     "iopub.status.busy": "2022-08-31T18:10:11.710826Z",
-     "iopub.status.idle": "2022-08-31T18:10:13.904365Z",
-     "shell.execute_reply": "2022-08-31T18:10:13.903459Z",
-     "shell.execute_reply.started": "2022-08-31T18:10:11.711833Z"
+     "iopub.execute_input": "2022-11-24T22:07:03.568480Z",
+     "iopub.status.busy": "2022-11-24T22:07:03.568147Z",
+     "iopub.status.idle": "2022-11-24T22:07:15.320017Z",
+     "shell.execute_reply": "2022-11-24T22:07:15.318367Z",
+     "shell.execute_reply.started": "2022-11-24T22:07:03.568445Z"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Location values cannot contain NaNs.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [9], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m#create a map\u001b[39;00m\n\u001b[1;32m     10\u001b[0m this_map \u001b[38;5;241m=\u001b[39m folium\u001b[38;5;241m.\u001b[39mMap(prefer_canvas\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m---> 12\u001b[0m this_map\u001b[38;5;241m.\u001b[39madd_child(\u001b[43mFastMarkerCluster\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mlatitude\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mlongitude\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtolist\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mplotDot\u001b[39m(point):\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;124;03m'''input: series that contains a numeric named latitude and a numeric named longitude\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;124;03m    this function creates a CircleMarker and adds it to your this_map'''\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/folium/plugins/fast_marker_cluster.py:78\u001b[0m, in \u001b[0;36mFastMarkerCluster.__init__\u001b[0;34m(self, data, callback, options, name, overlay, control, show, icon_create_function, **kwargs)\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFastMarkerCluster\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     77\u001b[0m data \u001b[38;5;241m=\u001b[39m if_pandas_df_convert_to_numpy(data)\n\u001b[0;32m---> 78\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m=\u001b[39m [[\u001b[38;5;241m*\u001b[39mvalidate_location(row[:\u001b[38;5;241m2\u001b[39m]), \u001b[38;5;241m*\u001b[39mrow[\u001b[38;5;241m2\u001b[39m:]]  \u001b[38;5;66;03m# noqa: E999\u001b[39;00m\n\u001b[1;32m     79\u001b[0m              \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m data]\n\u001b[1;32m     81\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m callback \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     82\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcallback \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m     83\u001b[0m \u001b[38;5;124m        var callback = function (row) \u001b[39m\u001b[38;5;124m{\u001b[39m\n\u001b[1;32m     84\u001b[0m \u001b[38;5;124m            var icon = L.AwesomeMarkers.icon();\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[38;5;124m            return marker;\u001b[39m\n\u001b[1;32m     88\u001b[0m \u001b[38;5;124m        };\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/folium/plugins/fast_marker_cluster.py:78\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFastMarkerCluster\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     77\u001b[0m data \u001b[38;5;241m=\u001b[39m if_pandas_df_convert_to_numpy(data)\n\u001b[0;32m---> 78\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m=\u001b[39m [[\u001b[38;5;241m*\u001b[39m\u001b[43mvalidate_location\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m, \u001b[38;5;241m*\u001b[39mrow[\u001b[38;5;241m2\u001b[39m:]]  \u001b[38;5;66;03m# noqa: E999\u001b[39;00m\n\u001b[1;32m     79\u001b[0m              \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m data]\n\u001b[1;32m     81\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m callback \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     82\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcallback \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m     83\u001b[0m \u001b[38;5;124m        var callback = function (row) \u001b[39m\u001b[38;5;124m{\u001b[39m\n\u001b[1;32m     84\u001b[0m \u001b[38;5;124m            var icon = L.AwesomeMarkers.icon();\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[38;5;124m            return marker;\u001b[39m\n\u001b[1;32m     88\u001b[0m \u001b[38;5;124m        };\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/folium/utilities.py:66\u001b[0m, in \u001b[0;36mvalidate_location\u001b[0;34m(location)\u001b[0m\n\u001b[1;32m     62\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLocation should consist of two numerical values, \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     63\u001b[0m                          \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbut \u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m of type \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m is not convertible to float.\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     64\u001b[0m                          \u001b[38;5;241m.\u001b[39mformat(coord, \u001b[38;5;28mtype\u001b[39m(coord)))\n\u001b[1;32m     65\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m math\u001b[38;5;241m.\u001b[39misnan(\u001b[38;5;28mfloat\u001b[39m(coord)):\n\u001b[0;32m---> 66\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLocation values cannot contain NaNs.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     67\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m [\u001b[38;5;28mfloat\u001b[39m(x) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m coords]\n",
+      "\u001b[0;31mValueError\u001b[0m: Location values cannot contain NaNs."
+     ]
+    }
+   ],
    "source": [
     "import folium\n",
     "import pandas as pd\n",
+    "from folium.plugins import FastMarkerCluster\n",
     "\n",
-    "data = pd.read_csv(\"/home/jovyan/ODBiz/6-AssignCSDs/Test/Test_CSDs.csv\")\n",
+    "\n",
+    "#data = pd.read_csv(\"/home/jovyan/ODBiz/6-AssignCSDs/Test/Test_CSDs.csv\")\n",
+    "data = pd.read_csv(\"/home/jovyan/ODBiz/9-Analysis/1PLA.csv\", low_memory=False)\n",
     "\n",
     "#create a map\n",
     "this_map = folium.Map(prefer_canvas=True)\n",
     "\n",
+    "this_map.add_child(FastMarkerCluster(data[['latitude', 'longitude']].values.tolist()))\n",
+    "\n",
     "def plotDot(point):\n",
     "    '''input: series that contains a numeric named latitude and a numeric named longitude\n",
     "    this function creates a CircleMarker and adds it to your this_map'''\n",
+    "    \n",
     "    folium.CircleMarker(location=[point.latitude, point.longitude],\n",
+    "    #folium.add_child(FastMarkerCluster(location=[point.latitude, point.longitude],\n",
     "                        weight=5,\n",
     "                        radius=2,\n",
     "                        color = 'magenta',\n",
     "                        tooltip = point['business_name'],\n",
     "                        popup = point['business_name']).add_to(this_map)\n",
     "\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    #my_map.add_child(FastMarkerCluster(samples[['latitude', 'longitude']].values.tolist()))\n",
+    "    \n",
     "#use df.apply(,axis=1) to \"iterate\" through every row in your dataframe\n",
     "try: \n",
     "    data.apply(plotDot, axis = 1)\n",
     "except:\n",
     "    pass\n",
     "\n",
+    "\n",
+    "#this_map.add_child(FastMarkerCluster(data[['latitude', 'longitude']].values.tolist()))\n",
+    "\n",
     "#Set the zoom to the maximum possible\n",
     "this_map.fit_bounds(this_map.get_bounds())\n",
     "\n",
     "#Save the map to an HTML file\n",
-    "this_map.save('/home/jovyan/ODBiz/6-AssignCSDs/Test/folium_map_test.html')\n",
+    "#this_map.save('/home/jovyan/ODBiz/6-AssignCSDs/Test/folium_map_test.html')\n",
+    "this_map.save('/home/jovyan/ODBiz/9-Analysis/folium_map_test.html')\n",
     "\n",
     "# ****** TO VIEW MAP, RIGHT CLICK THE HTML FILE AND OPEN IN NEW BROWSER TAB *******"
    ]
@@ -169,9 +200,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:odbiz]",
+   "display_name": "Python [conda env:root] *",
    "language": "python",
-   "name": "conda-env-odbiz-py"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -183,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
